--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
     "redux": "^3.7.1"
   }
 }
