--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-target": "^0.0.5",
     "clean-webpack-plugin": "^0.1.16",
     "devtron": "^1.4.0",
     "electron": "^1.6.11",
