--- a/package.json
+++ b/package.json
@@ -35,10 +35,15 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "css-loader": "^0.28.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "redux": "^3.7.1"
+    "redux": "^3.7.1",
+    "reset.css": "^2.0.2",
+    "style-loader": "^0.18.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1"
   }
 }
