--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "reset.css": "^2.0.2",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1"
+    "stylus-loader": "^3.0.1",
+    "uuid": "^3.1.0"
   }
 }
