--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
+    "redux-saga": "^0.15.4",
     "reset.css": "^2.0.2",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
