--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "core-decorators": "^0.19.0",
     "css-loader": "^0.28.4",
     "electron-debug": "^1.2.0",
+    "file-loader": "^0.11.2",
     "prop-types": "^15.5.10",
     "ps-node": "^0.1.6",
     "react": "^15.6.1",
