--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-saga": "^0.15.4",
+    "redux-storage": "^4.1.2",
+    "redux-storage-decorator-filter": "^1.1.8",
+    "redux-storage-engine-electronjsonstorage": "^0.2.1",
     "reset.css": "^2.0.2",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
