--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "classnames": "^2.2.5",
     "core-decorators": "^0.19.0",
     "css-loader": "^0.28.4",
     "electron-debug": "^1.2.0",
