--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "classnames": "^2.2.5",
     "core-decorators": "^0.19.0",
     "css-loader": "^0.28.4",
+    "deepclone": "^1.0.2",
     "electron-debug": "^1.2.0",
     "file-loader": "^0.11.2",
+    "object-path": "^0.11.4",
     "prop-types": "^15.5.10",
     "ps-node": "^0.1.6",
     "react": "^15.6.1",
