--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "binary-vdf": "^0.1.0",
     "classnames": "^2.2.5",
     "core-decorators": "^0.19.0",
     "css-loader": "^0.28.4",
@@ -61,6 +62,8 @@
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "vdf": "^0.0.2",
+    "winreg": "^1.2.4"
   }
 }
