Parse oculus local session database
Determine all application names from the sqlite database populated by Oculus Home

--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./",
-    "start": "NODE_ENV=development electron .",
-    "webpack": "NODE_ENV=production webpack --progress",
-    "webpack-server": "NODE_ENV=development webpack-dashboard -- webpack-dev-server --hot --inline --quiet",
+    "start": "cross-env NODE_ENV=development electron .",
+    "webpack": "cross-env NODE_ENV=production webpack --progress",
+    "webpack-server": "cross-env NODE_ENV=development webpack-dashboard -- webpack-dev-server --hot --inline --quiet",
     "prepack": "yarn run webpack",
     "predist": "yarn run webpack",
-    "pack": "NODE_ENV=production electron-builder --dir",
-    "dist": "NODE_ENV=production electron-builder"
+    "pack": "cross-env NODE_ENV=production electron-builder --dir",
+    "dist": "cross-env NODE_ENV=production electron-builder",
+    "postinstall": "install-app-deps"
   },
   "author": "Ashley Blurton",
   "license": "ISC",
@@ -30,6 +31,7 @@
     "electron": "^1.6.11",
     "electron-builder": "^19.11.1",
     "electron-devtools-installer": "^2.2.0",
+    "electron-rebuild": "^1.5.11",
     "eslint": "^4.1.1",
     "eslint-loader": "^1.8.0",
     "eslint-plugin-react": "^7.1.0",
@@ -43,12 +45,14 @@
     "binary-vdf": "^0.1.0",
     "classnames": "^2.2.5",
     "core-decorators": "^0.19.0",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "deepclone": "^1.0.2",
     "discoid": "^0.1.4",
     "electron-debug": "^1.2.0",
     "file-loader": "^0.11.2",
     "file-url": "^2.0.2",
+    "fs-extra": "^4.0.0",
     "node-process-windows": "^0.0.2",
     "object-path": "^0.11.4",
     "prop-types": "^15.5.10",
@@ -62,6 +66,7 @@
     "redux-storage-decorator-filter": "^1.1.8",
     "redux-storage-engine-electronjsonstorage": "^0.2.1",
     "reset.css": "^2.0.2",
+    "sqlite3": "^3.1.8",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
