--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "predist": "yarn run webpack",
     "pack": "cross-env NODE_ENV=production electron-builder --dir",
     "dist": "cross-env NODE_ENV=production electron-builder",
-    "postinstall": "install-app-deps"
+    "postinstall": "electron-builder install-app-deps"
   },
   "author": "Ashley Blurton",
   "license": "ISC",
@@ -31,7 +31,6 @@
     "electron": "^1.6.11",
     "electron-builder": "^19.11.1",
     "electron-devtools-installer": "^2.2.0",
-    "electron-rebuild": "^1.5.11",
     "eslint": "^4.1.1",
     "eslint-loader": "^1.8.0",
     "eslint-plugin-react": "^7.1.0",
